--- a/argocd/cluster-apps/kubechecks.yaml
+++ b/argocd/cluster-apps/kubechecks.yaml
@@ -4,7 +4,7 @@ kind: Application
 metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
-  name: grafana
+  name: kubechecks
   namespace: argocd
 spec:
   project: cluster-apps
