--- a/argocd/cluster-apps/argocd/argocd-rbac.yaml
+++ b/argocd/cluster-apps/argocd/argocd-rbac.yaml
@@ -7,5 +7,6 @@ metadata:
   name: argocd-rbac-cm
   namespace: argocd
 data:
+  policy.default: role:readonly
   policy.csv: |
     p, kubechecks, applications, get, */*, allow
