--- a/argocd/test-apps.yaml
+++ b/argocd/test-apps.yaml
@@ -26,7 +26,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: app-of-apps
+  project: test-apps
 
   # Source of the application manifests
   source:
