--- a/argocd/test-apps/nginx/deployment.yaml
+++ b/argocd/test-apps/nginx/deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: nginx
   namespace: test-apps
-  annotations:
-    reloader.stakater.com/auto: "true"
+  # annotations:
+    # reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
