test(reloader): auto pod reload

--- a/argocd/test-apps/nginx/secret.yaml
+++ b/argocd/test-apps/nginx/secret.yaml
@@ -6,5 +6,5 @@ metadata:
 type: Opaque
 data:
   TEST_ENV: c3VwZXJzZWNyZXRzdHJpbmc=
-  TEST_ENV2: YW5vdGhlcnN0cmluZw==
-  TEST_ENV3: YW5vdGhlcnN0cmluZw==
+  # TEST_ENV2: YW5vdGhlcnN0cmluZw==
+  # TEST_ENV3: YW5vdGhlcnN0cmluZw==
