--- a/argocd/cluster-apps/values/kubechecks-values.yaml
+++ b/argocd/cluster-apps/values/kubechecks-values.yaml
@@ -16,6 +16,9 @@ configMap:
     KUBECHECKS_TIDY_OUTDATED_COMMENTS_MODE: "hide" # other options delete
 
 deployment:
+  annotations:
+    reloader.stakater.com/auto: "true"
+
   envFrom:
     - secretRef:
         name: kubechecks-config
