--- a/argocd/test-apps/nginx/cloudflared.yaml
+++ b/argocd/test-apps/nginx/cloudflared.yaml
@@ -92,4 +92,6 @@ data:
     ingress:
     # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
     - hostname: nginx.joelpinder-dev.co.uk
-      service: http://nginx.test-apps.svc:80
+      ser
+    # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
+    - service: http_status:404
