--- a/argocd/test-apps/nginx/cloudflared.yaml
+++ b/argocd/test-apps/nginx/cloudflared.yaml
@@ -92,6 +92,6 @@ data:
     ingress:
     # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
     - hostname: nginx.joelpinder-dev.co.uk
-      ser
+      service: nginx.test-apps.svc.cluster.local:80
     # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
     - service: http_status:404
