update cloudflared deployment

--- a/argocd/test-apps/nginx/cloudflared.yaml
+++ b/argocd/test-apps/nginx/cloudflared.yaml
@@ -70,7 +70,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloudflared
-  namespace: test-apps
 data:
   config.yaml: |
     # Name of the tunnel you want to run
@@ -92,6 +91,6 @@ data:
     ingress:
     # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
     - hostname: nginx.joelpinder-dev.co.uk
-      service: nginx.test-apps.svc.cluster.local:80
+      service: http://nginx.test-apps.svc:80
     # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
     - service: http_status:404
