--- a/argocd/test-apps/nginx/cloudflared.yaml
+++ b/argocd/test-apps/nginx/cloudflared.yaml
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: cloudflared
   namespace: test-apps
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
