--- a/argocd/test-apps/nginx/cloudflared.yaml
+++ b/argocd/test-apps/nginx/cloudflared.yaml
@@ -72,6 +72,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloudflared
+  namespace: test-apps
 data:
   config.yaml: |
     # Name of the tunnel you want to run
