--- a/argocd/test-apps.yaml
+++ b/argocd/test-apps.yaml
@@ -32,7 +32,7 @@ spec:
   source:
     repoURL: https://github.com/joelp172/k8s-tools.git
     targetRevision: HEAD
-    path: argocd/test-apps
+    path: argocd/test-applications
     directory:
       recurse: true
 
