--- a/argocd/base/tempo/app.yaml
+++ b/argocd/base/tempo/app.yaml
@@ -19,8 +19,7 @@ spec:
       chart: tempo
       targetRevision: 1.10.3
       helm:
-        valueFiles:
-        - $values/argocd/observability/values/tempo-values.yaml
+        valueFiles: []
 
   destination:
     namespace: tracing
