--- a/argocd/prod/local-cluster-1/kustomization.yaml
+++ b/argocd/prod/local-cluster-1/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namePrefix:
+  local-cluster-1-
+
 resources:
 - 00_project.yaml
 - 01_applications.yaml
