--- a/argocd/prod/local-cluster-1/argocd/kustomization.yaml
+++ b/argocd/prod/local-cluster-1/argocd/kustomization.yaml
@@ -3,3 +3,15 @@ kind: Kustomization
 
 resources:
 - ../../../base/argocd
+
+patches:
+  - target:
+      group: argoproj.io
+      version: v1alpha1
+      kind: Application
+      name: argocd
+    patch: |-
+      # Cluster specific config path
+      - op: replace
+        path: /spec/sources/1/path
+        value: argocd/prod/local-cluster-1/argocd/config
