--- a/argocd/prod/local-cluster-1/argocd/kustomization.yaml
+++ b/argocd/prod/local-cluster-1/argocd/kustomization.yaml
@@ -11,6 +11,11 @@ patches:
       kind: Application
       name: argocd
     patch: |-
+      # project name
+      - op: replace
+        path: /spec/project
+        value: local-cluster-1-cluster-apps
+
       # Cluster specific config path
       - op: replace
         path: /spec/sources/1/path
