--- a/argocd/prod/local-cluster-1/prometheus/kustomization.yaml
+++ b/argocd/prod/local-cluster-1/prometheus/kustomization.yaml
@@ -9,7 +9,7 @@ patches:
       group: argoproj.io
       version: v1alpha1
       kind: Application
-      name: grafana
+      name: prometheus
     patch: |-
       # project name
       - op: replace
