--- a/prod/local-cluster-1/argocd/kustomization.yaml
+++ b/prod/local-cluster-1/argocd/kustomization.yaml
@@ -2,27 +2,21 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../base/kubechecks
+- ../../../base/argocd
 
 patches:
   - target:
       group: argoproj.io
       version: v1alpha1
       kind: Application
-      name: kubechecks
+      name: argocd
     patch: |-
       # project name
       - op: replace
         path: /spec/project
         value: local-cluster-1-cluster-apps
 
-      # Helm values override
-      - op: add
-        path: /spec/sources/1/helm/valueFiles/-
-        value:
-          $values/argocd/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
-
       # Cluster specific config path
       - op: replace
-        path: /spec/sources/2/path
-        value: argocd/prod/local-cluster-1/kubechecks/config
+        path: /spec/sources/0/path
+        value: prod/local-cluster-1/argocd/config
