--- a/prod/local-cluster-1/kubechecks/kustomization.yaml
+++ b/prod/local-cluster-1/kubechecks/kustomization.yaml
@@ -2,22 +2,27 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../base/tempo
+  - ../../../base/kubechecks
 
 patches:
   - target:
       group: argoproj.io
       version: v1alpha1
       kind: Application
-      name: tempo
+      name: kubechecks
     patch: |-
       # project name
       - op: replace
         path: /spec/project
-        value: local-cluster-1-observability-apps
+        value: local-cluster-1-cluster-apps
 
       # Helm values override
       - op: add
         path: /spec/sources/1/helm/valueFiles/-
         value:
-          $values/argocd/prod/local-cluster-1/tempo/tempo-values.yaml
+          $values/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
+
+      # Cluster specific config path
+      - op: replace
+        path: /spec/sources/2/path
+        value: prod/local-cluster-1/kubechecks/config
