--- a/prod/local-cluster-1/nginx/kustomization.yaml
+++ b/prod/local-cluster-1/nginx/kustomization.yaml
@@ -2,21 +2,21 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../../base/argocd
+- ../../../base/nginx
 
 patches:
   - target:
       group: argoproj.io
       version: v1alpha1
       kind: Application
-      name: argocd
+      name: nginx
     patch: |-
       # project name
       - op: replace
         path: /spec/project
-        value: local-cluster-1-cluster-apps
+        value: local-cluster-1-test-apps
 
       # Cluster specific config path
       - op: replace
-        path: /spec/sources/0/path
-        value: argocd/prod/local-cluster-1/argocd/config
+        path: /spec/sources/1/path
+        value: prod/local-cluster-1/nginx/config
