--- a/prod/local-cluster-1/tempo/kustomization.yaml
+++ b/prod/local-cluster-1/tempo/kustomization.yaml
@@ -2,22 +2,22 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../base/reloader
+  - ../../../base/tempo
 
 patches:
   - target:
       group: argoproj.io
       version: v1alpha1
       kind: Application
-      name: reloader
+      name: tempo
     patch: |-
       # project name
       - op: replace
         path: /spec/project
-        value: local-cluster-1-cluster-apps
+        value: local-cluster-1-observability-apps
 
       # Helm values override
       - op: add
         path: /spec/sources/1/helm/valueFiles/-
         value:
-          $values/argocd/prod/local-cluster-1/reloader/reloader-values.yaml
+          $values/prod/local-cluster-1/tempo/tempo-values.yaml
