chore(kubechecks): update config

--- a/prod/local-cluster-1/argocd/config/argocd-rbac.yaml
+++ b/prod/local-cluster-1/argocd/config/argocd-rbac.yaml
@@ -9,4 +9,4 @@ metadata:
 data:
   policy.default: role:readonly
   policy.csv: |
-    g, kubechecks, role:admin
+    p, kubechecks, applications, get, */*, allow
