--- a/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
+++ b/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
@@ -5,6 +5,7 @@ configMap:
     KUBECHECKS_ARGOCD_API_INSECURE: "true"
     KUBECHECKS_ARGOCD_API_PATH_PREFIX: /
     KUBECHECKS_ARGOCD_API_NAMESPACE: argocd
+    KUBECHECKS_ARGOCD_API_PLAINTEXT: "true"
     KUBECHECKS_FALLBACK_K8S_VERSION: "1.22.0"
     KUBECHECKS_LOG_LEVEL: debug
     KUBECHECKS_NAMESPACE: kubechecks
@@ -13,7 +14,7 @@ configMap:
     KUBECHECKS_OTEL_ENABLED: "false"
     KUBECHECKS_VCS_TYPE: "github"
     KUBECHECKS_TIDY_OUTDATED_COMMENTS_MODE: "hide" # other options delete
-    KUBECHECKS_MONITOR_ALL_APPLICATIONS: true
+    KUBECHECKS_MONITOR_ALL_APPLICATIONS: "true"
 
 deployment:
   annotations:
