--- a/prod/local-cluster-1/argocd/config/cloudflared.yaml
+++ b/prod/local-cluster-1/argocd/config/cloudflared.yaml
@@ -95,6 +95,6 @@ data:
     ingress:
     # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
     - hostname: argocd.joelpinder-dev.co.uk
-      service: https://argocd-server.argocd.svc
+      service: http://argocd-server.argocd.svc.cluster.local:80
     # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
     - service: http_status:404
