--- a/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
+++ b/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
@@ -5,7 +5,7 @@ configMap:
     KUBECHECKS_ARGOCD_API_INSECURE: "false"
     KUBECHECKS_ARGOCD_API_PATH_PREFIX: /
     KUBECHECKS_ARGOCD_API_NAMESPACE: argocd
-    KUBECHECKS_ARGOCD_API_PLAINTEXT: "true"
+    KUBECHECKS_ARGOCD_API_PLAINTEXT: "false"
     KUBECHECKS_FALLBACK_K8S_VERSION: "1.22.0"
     KUBECHECKS_LOG_LEVEL: debug
     KUBECHECKS_NAMESPACE: kubechecks
