chore(kubechecks): update config

--- a/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
+++ b/prod/local-cluster-1/kubechecks/kubechecks-values.yaml
@@ -2,7 +2,7 @@
 configMap:
   create: true
   env:
-    KUBECHECKS_ARGOCD_API_INSECURE: "false"
+    KUBECHECKS_ARGOCD_API_INSECURE: "true"
     KUBECHECKS_ARGOCD_API_PATH_PREFIX: /
     KUBECHECKS_ARGOCD_API_NAMESPACE: argocd
     KUBECHECKS_ARGOCD_API_PLAINTEXT: "false"
